cloning from https://code.google.com/p/teaching-kids-programming/

--- a/README
+++ b/README
@@ -1,10 +1,57 @@
-All the programming projects that I'm doing with Cate, my daughter starting at 10 years old
+All the programming projects that I'm doing with Cate starting at 10 years old
+
+Names
+------
+Sketchy      +1 +1
+Neopad       0  +1
+colorsketch  0  0
+florecent    +1  0
+quill        +1 +1
+colordesk    0  0
+neon-desk   -1
+Neon-Sketch
+SketchPad
+Drawing-a-Day
+DrawMee
 
 social-drawing: 
-  - A simple canvas to draw
-  - A color palatte on top with 7 colors
-    - she wants neon colo
-  - Move the mouse
-  - Click and move to draw
-  - Bonus
-    - a friend can join and draw on a shared canvas
+---------------
+  - DONE Bug: eraser erases border
+  - Bug: hitting return on pen size resets the drawing
+  - Be able to save a drawing and load it back
+  - Add more palettes
+    - http://www.colourlovers.com/
+    - http://kuler.adobe.com/#themes/rating?time=30
+  - Share the drawing to a friend, and that friend can see the list of drawings shared with him/her
+
+  - DONE Switch to 5 different colr pallattes.
+    - Neon
+    - summer
+    - spring
+    - fall
+    - winter
+  - DONE A simple canvas to draw
+  - DONE A color palette on top with 7 colors
+    - DONE she wants neon colors
+    - DONE rearrange for Cate's preferences
+      - DONE get Cate's new colors
+    - DONE to be able to change color
+  - DONE Move the mouse 
+  - DONE Click and move to draw
+  - DONE Need a eraser or white color
+
+  - DONE P1 Brush size
+  
+COLOR
+#00FF40 purple  #FEFF49 yellow
+#DDA5F7 pink
+#FF2AF8 green
+-------
+Reference commands
+  git config --global user.name "Tony Tam"
+  git config --global user.name "tam.tony@gmail.com"
+  git init
+  git add README
+  git commit -m 'first commit for social drawing' README
+  git remote add origin https://tam.tony@code.google.com/p/teaching-kids-programming/ 
+  git push -u origin master
